# Small-ish-coding-excercise-

./: .gitignore  README.md  docker-compose.yml  tests.Dockerfile
ml_service/: Dockerfile  app.py  pyproject.toml
posts_service/: Dockerfile  pyproject.toml  pytest.ini
posts_service/server/: .dockerenv  app.py  utils.py
posts_service/server/tasks/: config.py  database.py  tasks.py
posts_service/tests/: test.py
