[tool.poetry]
name = "ml_service"
version = "1"
description = "Mock ml service to predict if foul words exist in a sentence"
authors = ["Abdulmalik Giwa"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
