[tool.poetry]
name = "posts_service"
version = "1.0"
description = "Test api"
authors = ["Abdulmalik Giwa"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Flask = "^2.1.3"
marshmallow = "^3.17.0"
celery = "^5.2.7"
black = "^22.6.0"
isort = "^5.10.1"
python-dotenv = "^0.20.0"
redis = "^4.3.4"
tinydb = "^4.7.0"
flower = "^1.1.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
